--- a/emacs-init.org
+++ b/emacs-init.org
@@ -513,7 +513,7 @@
 
     (defvar ddavis-v-font
       (cond (ddavis-v-is-mac '(font . "JetBrains Mono-12"))
-            (ddavis-v-is-cc7 '(font . "-SAJA-Cascadia Code-normal-normal-normal-*-*-*-*-*-m-0-iso10646-1"))
+            (ddavis-v-is-cc7 '(font . "-*-JetBrains Mono-normal-normal-normal-*-*-*-*-*-d-0-iso10646-1"))
             (ddavis-v-is-pion '(font . "-SAJA-Cascadia Code-normal-normal-normal-*-*-*-*-*-m-0-iso10646-1"))
             (ddavis-v-is-grads-18 '(font . "-*-source code pro-semibold-*-normal-*-*-100-100-100-m-0-*-*"))))
     (add-to-list 'default-frame-alist ddavis-v-font))
