--- a/emacs-init.org
+++ b/emacs-init.org
@@ -878,7 +878,7 @@ My [[https://www.djcbsoftware.nl/code/mu/mu4e.html][mu4e]] setup
                                (string-match-p "^/cern" (mu4e-message-field msg :maildir))))
                :vars '( ( user-mail-address      . "ddavis@cern.ch" )
                         ( user-email-address     . "ddavis@cern.ch" )
-                        ( user-full-name         . "Douglas Davis" )
+                        ( user-full-name         . "Doug Davis" )
                         ( mu4e-trash-folder      . "/cern/Trash" )
                         ( mu4e-sent-folder       . "/cern/Sent" )
                         ( mu4e-drafts-folder     . "/cern/Drafts" )
@@ -893,7 +893,7 @@ My [[https://www.djcbsoftware.nl/code/mu/mu4e.html][mu4e]] setup
                                (string-match-p "^/duke" (mu4e-message-field msg :maildir))))
                :vars '( ( user-mail-address       . "ddavis@phy.duke.edu" )
                         ( user-email-address      . "ddavis@phy.duke.edu" )
-                        ( user-full-name          . "Douglas Davis" )
+                        ( user-full-name          . "Doug Davis" )
                         ( mu4e-trash-folder       . "/duke/Trash" )
                         ( mu4e-sent-folder        . "/duke/Sent" )
                         ( mu4e-drafts-folder      . "/duke/Drafts" )
