--- a/emacs-init.org
+++ b/emacs-init.org
@@ -452,9 +452,19 @@ Configuration for [[https://github.com/emacs-lsp/lsp-mode][lsp-mode]].
     :config
     (setenv "WORKON_HOME" "~/.pyenv/versions"))
 
+  (defun ddavis/get-pyvenv-name ()
+    "grab the name of the active pyvenv (nil if not defined)"
+    (when pyvenv-virtual-env
+      (car (last (split-string (directory-file-name pyvenv-virtual-env) "/")))))
+
   (defun ddavis/py-auto-lsp ()
+    "turn on lsp mode in a Python project by trying to
+  automatically determine which pyenv virtual environment to
+  activate based on the project name"
     (interactive)
-    (if (and pyvenv-virtual-env (file-directory-p pyvenv-virtual-env))
+    (if (and pyvenv-virtual-env
+             (file-directory-p pyvenv-virtual-env)
+             (string= projectile-project-name (ddavis/get-pyvenv-name)))
         (lsp)
       (pyvenv-workon (projectile-project-name))
       (if (file-directory-p pyvenv-virtual-env)
@@ -797,6 +807,7 @@ Some configuration specific to using Emacs on macOS.
     (global-set-key (kbd "s-3") 'split-window-right)
     (global-set-key (kbd "s-4") 'mu4e)
     (global-set-key (kbd "s-f") 'helm-find-files)
+    (global-set-key (kbd "s-p") 'helm-projectile-find-file)
     (global-set-key (kbd "s-r") 'helm-projectile-rg)
     (global-set-key (kbd "s-o") 'other-window)
     (global-set-key (kbd "s-/") 'previous-buffer)
