--- a/emacs-init.org
+++ b/emacs-init.org
@@ -728,11 +728,32 @@ Miscellaneous stiff that should probably be better sorted.
     :bind ("C-x w" . 'elfeed)
     :config
     (setq elfeed-feeds
-          '("https://planet.scipy.org/feed.xml"
-            "https://planet.emacslife.com/atom.xml"
-            "https://ddavis.io/index.xml"
-            "http://pragmaticemacs.com/feed/"))
-    (setq-default elfeed-search-filter "@4-weeks-ago"))
+          '(("https://planet.scipy.org/feed.xml" python)
+            ("https://planet.emacslife.com/atom.xml" emacs)
+            ("https://ddavis.io/index.xml" blog)
+            ("http://pragmaticemacs.com/feed/" emacs)
+            ("http://feeds.podtrac.com/zKq6WZZLTlbM" nyt podcast)
+            ("https://www.npr.org/rss/podcast.php?id=510310" npr podcast)
+            ("https://www.npr.org/rss/podcast.php?id=510318" npr podcast)))
+
+    (defvar ddavis-v-podcast-speed "1.33")
+
+    (defun elfeed-play-enclosure-with-mpv ()
+      "Play enclosure link with mpv."
+      (interactive)
+      (let ((speed ddavis-v-podcast-speed)
+            (link (nth 0 (car (elfeed-entry-enclosures elfeed-show-entry)))))
+        (message "Opening %s with with mpv..." link)
+        (start-process "elfeed-mpv" nil "mpv"
+                       "--speed" speed
+                       link)))
+
+    ;; Entries older than 2 weeks are marked as read
+    (add-hook 'elfeed-new-entry-hook
+              (elfeed-make-tagger :before "4 weeks ago"
+                                  :remove 'unread))
+
+    (setq-default elfeed-search-filter "@3-weeks-ago"))
 #+end_src
 
 * delete whitespace
